// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList should render and display a caption 1`] = `
<div>
  <Caption
    title="Willkommen"
  />
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": "test content",
      }
    }
  />
  <CategoryList__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {},
          "_content": "",
          "_id": 0,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": -1,
          "_parentPath": "",
          "_path": "/augsburg/de",
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
        }
      }
      key="0"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {
            "en" => "4361",
            "ar" => "4367",
            "fa" => "4368",
          },
          "_content": "",
          "_id": 3649,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": 11,
          "_parentPath": "/augsburg/de",
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
        }
      }
      key="3649"
    />
  </CategoryList__List>
</div>
`;

exports[`CategoryList should render and not display a caption 1`] = `
<div>
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <CategoryList__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {},
          "_content": "",
          "_id": 0,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": -1,
          "_parentPath": "",
          "_path": "/augsburg/de",
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
        }
      }
      key="0"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {
            "en" => "4361",
            "ar" => "4367",
            "fa" => "4368",
          },
          "_content": "",
          "_id": 3649,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": 11,
          "_parentPath": "/augsburg/de",
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
        }
      }
      key="3649"
    />
  </CategoryList__List>
</div>
`;
